<resources>
    <string name="app_name">Test Control</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="enter_group">Group</string>
    <string name="enter_name">Name and Surname</string>
    <string name="register">Register</string>
    <string name="lesson">Lesson</string>
    <string name="archive">Archive</string>
    <string name="profile">Profile</string>
    <string name="join_text">Please join the lesson by QR code</string>
    <string name="no_tasks">There are no tasks in archive</string>
    <string name="join">Join</string>
    <string name="yes">Yes!</string>
    <string name="no">No!</string>
    <string name="don_t_know">Don\'t know</string>
    <string name="question">Question:</string>
    <string name="correct_answer_yes">Correct answer: Yes!</string>
    <string name="you_selected_no">You selected: No!</string>
    <string name="you_selected_yes">You selected: Yes!</string>
    <string name="save">Save</string>
    <string name="create_your_question">Create your question</string>
    <string name="enter_your_question">Enter your question</string>
    <string name="choose_correct_answer">Choose correct answer:</string>
    <string name="details">Details</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_lesson">Create lesson</string>
</resources>