<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/avenir_next_bold"
            android:text="@string/question"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvQuestion"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:fontFamily="@font/avenir_next_demi_bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:id="@+id/btnYes"
                android:fontFamily="@font/avenir_next_bold"
                android:layout_marginLeft="10dp"
                android:text="@string/yes" />

            <Button
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnNo"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/avenir_next_bold"
                android:layout_marginLeft="10dp"
                android:text="@string/no" />

            <Button
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnDontKnow"
                android:fontFamily="@font/avenir_next_bold"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/don_t_know" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>